--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+  "express": "^4.21.0",
+  "mongoose": "^8.0.0",
+  "dotenv": "^16.3.0"
+},
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
